# LambdaCommBenchmarks

./: .gitmodules  LambdaCommBenchmarks.code-workspace  README.md
nat/: CMakeLists.txt  deployment.sh  main.cpp  main_pingpong.cpp
nat/one_to_many/connection_setup/: CMakeLists.txt  invoke.sh  main.cpp
nat/one_to_many/latency_distribution/: invoke.sh
nat/one_to_many/scaling_data/: invoke.sh
nat/one_to_many/scaling_lambdas/: invoke.sh  invoke_overhead.sh
nat/p2p/latency_distribution/: invoke.sh
nat/p2p/latency_distribution_1b/: invoke.sh
nat/p2p/scaling/: invoke.sh
nat/pingpong/: invoke.sh
nat/pingpong/results/: 1648602409_1_producer_times  1648602436_1000_producer_times  1648602537_10000_producer_times  1648602593_100000_producer_times  1648602697_1000000_producer_times  1648603701_10000000_producer_times  1648687358_100000000_producer_times
redis/: CMakeLists.txt  deployment.sh  main.cpp  main_pingpong.cpp
redis/download/: invoke.sh
redis/download/out_medium/: consumer_100000000_1.json  consumer_100000000_10.json  consumer_100000000_2.json  consumer_100000000_3.json  consumer_100000000_4.json  consumer_100000000_5.json  consumer_100000000_6.json  consumer_100000000_7.json  consumer_100000000_8.json  consumer_100000000_9.json  consumer_10000000_1.json  consumer_10000000_10.json  consumer_10000000_2.json  consumer_10000000_3.json  consumer_10000000_4.json  consumer_10000000_5.json  (+53 more)
redis/pingpong/: download.sh  invoke.sh
smi/: CMakeLists.txt  deployment.sh  invoke.sh  invoke_smi.sh  main.cpp  smi.json  smi_benchmark.cpp
smi/out_lambda_direct/: allreduce_128_0.json  allreduce_128_1.json  allreduce_128_10.json  allreduce_128_100.json  allreduce_128_101.json  allreduce_128_102.json  allreduce_128_103.json  allreduce_128_104.json  allreduce_128_105.json  allreduce_128_106.json  allreduce_128_107.json  allreduce_128_108.json  allreduce_128_109.json  allreduce_128_11.json  allreduce_128_110.json  allreduce_128_111.json  allreduce_128_112.json  allreduce_128_113.json  allreduce_128_114.json  allreduce_128_115.json  allreduce_128_116.json  allreduce_128_117.json  allreduce_128_118.json  allreduce_128_119.json  allreduce_128_12.json  allreduce_128_120.json  allreduce_128_121.json  allreduce_128_122.json  allreduce_128_123.json  allreduce_128_124.json  allreduce_128_125.json  allreduce_128_126.json  allreduce_128_127.json  allreduce_128_13.json  allreduce_128_14.json  allreduce_128_15.json  allreduce_128_16.json  allreduce_128_17.json  allreduce_128_18.json  allreduce_128_19.json  (+3020 more)
smi/out_lambda_redis/: allreduce_128_0.json  allreduce_128_1.json  allreduce_128_10.json  allreduce_128_100.json  allreduce_128_101.json  allreduce_128_102.json  allreduce_128_103.json  allreduce_128_104.json  allreduce_128_105.json  allreduce_128_106.json  allreduce_128_107.json  allreduce_128_108.json  allreduce_128_109.json  allreduce_128_11.json  allreduce_128_110.json  allreduce_128_111.json  allreduce_128_112.json  allreduce_128_113.json  allreduce_128_114.json  allreduce_128_115.json  allreduce_128_116.json  allreduce_128_117.json  allreduce_128_118.json  allreduce_128_119.json  allreduce_128_12.json  allreduce_128_120.json  allreduce_128_121.json  allreduce_128_122.json  allreduce_128_123.json  allreduce_128_124.json  allreduce_128_125.json  allreduce_128_126.json  allreduce_128_127.json  allreduce_128_13.json  allreduce_128_14.json  allreduce_128_15.json  allreduce_128_16.json  allreduce_128_17.json  allreduce_128_18.json  allreduce_128_19.json  (+3020 more)
smi/out_lambda_s3/: allreduce_16_0.json  allreduce_16_1.json  allreduce_16_10.json  allreduce_16_11.json  allreduce_16_12.json  allreduce_16_13.json  allreduce_16_14.json  allreduce_16_15.json  allreduce_16_2.json  allreduce_16_3.json  allreduce_16_4.json  allreduce_16_5.json  allreduce_16_6.json  allreduce_16_7.json  allreduce_16_8.json  allreduce_16_9.json  allreduce_2_0.json  allreduce_2_1.json  allreduce_32_0.json  allreduce_32_1.json  allreduce_32_10.json  allreduce_32_11.json  allreduce_32_12.json  allreduce_32_13.json  allreduce_32_14.json  allreduce_32_15.json  allreduce_32_16.json  allreduce_32_17.json  allreduce_32_18.json  allreduce_32_19.json  allreduce_32_2.json  allreduce_32_20.json  allreduce_32_21.json  allreduce_32_22.json  allreduce_32_23.json  allreduce_32_24.json  allreduce_32_25.json  allreduce_32_26.json  allreduce_32_27.json  allreduce_32_28.json  (+332 more)
smi/res/: allreduce_16.txt  allreduce_2.txt  allreduce_2_0.txt  allreduce_2_1.txt  allreduce_32.txt  allreduce_4.txt  allreduce_4_0.txt  allreduce_4_1.txt  allreduce_4_2.txt  allreduce_4_3.txt  allreduce_8.txt  allreduce_8_0.txt  allreduce_8_1.txt  allreduce_8_2.txt  allreduce_8_3.txt  allreduce_8_4.txt  allreduce_8_5.txt  allreduce_8_6.txt  allreduce_8_7.txt  bcast_16.txt  bcast_2.txt  bcast_2_0.txt  bcast_2_1.txt  bcast_32.txt  bcast_4.txt  bcast_4_0.txt  bcast_4_1.txt  bcast_4_2.txt  bcast_4_3.txt  bcast_8.txt  bcast_8_0.txt  bcast_8_1.txt  bcast_8_2.txt  bcast_8_3.txt  bcast_8_4.txt  bcast_8_5.txt  bcast_8_6.txt  bcast_8_7.txt  gather_16.txt  gather_2.txt  (+74 more)
(+9163 files in other folders)
